Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-9782

KuduPartitionExpr is not thread-safe

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • Impala 4.0.0
    • Backend
    • None

    Description

      This is a blocker for supporting Kudu DML with mt_dop. The expression has some mutable objects in the ScalarExpr object that needs to be moved to the evaluator.

      KuduPartitioner is not thread-safe, because it uses an internal buffer. We should consider making it thread-safe or clonable, because the initialisation is expensive and does RPCs and things - https://github.com/cloudera/kudu/blob/master/src/kudu/client/partitioner-internal.cc#L40

      KuduPartialRow is inherently not thread-safe because it contains thread-local data.

      Attachments

        Issue Links

          Activity

            People

              tarmstrong Tim Armstrong
              tarmstrong Tim Armstrong
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: