be/src/exprs/kudu-partition-expr.cc
@@ -17,10 +17,11 @@
 
 #include "exprs/kudu-partition-expr.h"
 
-#include <gutil/strings/substitute.h>
+#include <kudu/common/partial_row.h>
 
 #include "exec/kudu-util.h"
 #include "exprs/scalar-expr-evaluator.h"
+#include "gutil/strings/substitute.h"
 #include "runtime/exec-env.h"
 #include "runtime/fragment-state.h"
 #include "runtime/runtime-state.h"
@@ -28,7 +29,18 @@
 #include "runtime/tuple.h"
 #include "runtime/types.h"
 
+#include "common/names.h"
+
 namespace impala {
+
+/// Per-thread context for KuduPartitionExpr.
+struct KuduPartitionExprCtx {
+  /// Used to call into Kudu to determine partitions.
+  unique_ptr<kudu::client::KuduPartitioner> partitioner;
+
+  /// Stores the col values for each row that is partitioned.
+  unique_ptr<kudu::KuduPartialRow> row;
+};
 
 KuduPartitionExpr::KuduPartitionExpr(const TExprNode& node)
   : ScalarExpr(node), tkudu_partition_expr_(node.kudu_partition_expr) {}
@@ -48,20 +60,46 @@ Status KuduPartitionExpr::Init(
   kudu::client::KuduClient* client;
   RETURN_IF_ERROR(ExecEnv::GetInstance()->GetKuduClient(
       table_desc_->kudu_master_addresses(), &client));
-  kudu::client::sp::shared_ptr<kudu::client::KuduTable> table;
-  KUDU_RETURN_IF_ERROR(
-      client->OpenTable(table_desc_->table_name(), &table), "Failed to open Kudu table.");
-  kudu::client::KuduPartitionerBuilder b(table);
+  KUDU_RETURN_IF_ERROR(client->OpenTable(table_desc_->table_name(), &table_),
+      "Failed to open Kudu table.");
+  return Status::OK();
+}
+
+Status KuduPartitionExpr::OpenEvaluator(FunctionContext::FunctionStateScope scope,
+    RuntimeState* state, ScalarExprEvaluator* eval) const {
+  RETURN_IF_ERROR(ScalarExpr::OpenEvaluator(scope, state, eval));
+
+  DCHECK_GE(fn_ctx_idx_, 0);
+  FunctionContext* fn_ctx = eval->fn_context(fn_ctx_idx_);
+  kudu::client::KuduPartitionerBuilder b(table_);
   kudu::client::KuduPartitioner* partitioner;
   KUDU_RETURN_IF_ERROR(b.Build(&partitioner), "Failed to build Kudu partitioner.");
-  partitioner_.reset(partitioner);
-  row_.reset(table->schema().NewRow());
 
+  // Ownership of the KuduPartitioner and PartialRow transfer to the function state.
+  // They are destroyed in CloseEvaluator().
+  fn_ctx->SetFunctionState(FunctionContext::THREAD_LOCAL,
+      new KuduPartitionExprCtx{unique_ptr<kudu::client::KuduPartitioner>(partitioner),
+          unique_ptr<kudu::KuduPartialRow>(table_->schema().NewRow())});
   return Status::OK();
+}
+
+void KuduPartitionExpr::CloseEvaluator(FunctionContext::FunctionStateScope scope,
+    RuntimeState* state, ScalarExprEvaluator* eval) const {
+  FunctionContext* fn_ctx = eval->fn_context(fn_ctx_idx_);
+  KuduPartitionExprCtx* ctx = reinterpret_cast<KuduPartitionExprCtx*>(
+      fn_ctx->GetFunctionState(FunctionContext::THREAD_LOCAL));
+  // The destructor of KuduPartitionExprCtx handles all cleanup. Note that 'ctx' may be
+  // NULL, in which case this is a no-op.
+  delete ctx;
 }
 
 IntVal KuduPartitionExpr::GetIntValInterpreted(
     ScalarExprEvaluator* eval, const TupleRow* row) const {
+  FunctionContext* fn_ctx = eval->fn_context(fn_ctx_idx_);
+  KuduPartitionExprCtx* ctx = reinterpret_cast<KuduPartitionExprCtx*>(
+      fn_ctx->GetFunctionState(FunctionContext::THREAD_LOCAL));
+  DCHECK(ctx != nullptr);
+  kudu::KuduPartialRow* kudu_row = ctx->row.get();
   for (int i = 0; i < children_.size(); ++i) {
     void* val = eval->GetValue(*GetChild(i), row);
     if (val == NULL) {
@@ -73,7 +111,7 @@ IntVal KuduPartitionExpr::GetIntValInterpreted(
     const ColumnDescriptor& col_desc = table_desc_->col_descs()[col];
     const ColumnType& type = col_desc.type();
     DCHECK_EQ(GetChild(i)->type().type, type.type);
-    Status s = WriteKuduValue(col, type, val, false, row_.get());
+    Status s = WriteKuduValue(col, type, val, false, kudu_row);
     // This can only fail if we set a col to an incorect type, which would be a bug in
     // planning, so we can DCHECK.
     DCHECK(s.ok()) << "WriteKuduValue failed for col = " << col_desc.name()
@@ -81,11 +119,11 @@ IntVal KuduPartitionExpr::GetIntValInterpreted(
   }
 
   int32_t kudu_partition = -1;
-  kudu::Status s = partitioner_->PartitionRow(*row_.get(), &kudu_partition);
+  kudu::Status s = ctx->partitioner->PartitionRow(*kudu_row, &kudu_partition);
   // This can only fail if we fail to supply some of the partition cols, which would be a
   // bug in planning, so we can DCHECK.
-  DCHECK(s.ok()) << "KuduPartitioner::PartitionRow failed on row = '" << row_->ToString()
-                 << "': " << s.ToString();
+  DCHECK(s.ok()) << "KuduPartitioner::PartitionRow failed on row = '"
+                 << kudu_row->ToString() << "': " << s.ToString();
   return IntVal(kudu_partition);
 }
 
